<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sanction"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/tmn_sanction" />
        <item
            android:id="@+id/nav_merit"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tmn_merit" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tmn_profile" />
        <!--<item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <item android:title="@string/tsn_setting">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/tb_log_out" />
            <!--<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />-->
        </menu>
    </item>

</menu>
